--- a/css/var/global.css
+++ b/css/var/global.css
@@ -1,6 +1,6 @@
 :root{
-    --primary: #becee5;
-    --secondary: #000000;
+    --primary: #d9dfdd;
+    --secondary: #2f4f4f;
     --roboto: font-family: 'Roboto', sans-serif;
     --gradient: radial-gradient(circle, rgba(9,9,121,1) 31%, rgba(190,206,229,1) 61%, rgba(2,0,36,1) 88%);
 }
